testsuite/tests/contrib/lkt_semantic/property_error/test.lkt
fun prop1(): Bool = raise PropertyError("error")
fun prop2(): Bool = (raise PropertyError("error"))
@invalid fun prop3(): Bool = raise (PropertyError("error"))

# prop5 and prop6 should be rejected (we don't want any PropertyError
# value living outside of the exception system).
@invalid fun prop5(): PropertyError = raise PropertyError()
@invalid fun prop6(): Bool = raise prop5()

# Invalid because of missing raise keyword
@invalid val prop7 = PropertyError("error")
@invalid val prop8 = (PropertyError("error"))

fun prop9(): Bool = {
   val n: Int = 1;

   raise PropertyError("Explicit error")
}

# Invalid because only PropertyError can be raised
val i: Int = 1
@invalid fun prop10(): Bool = raise i

@invalid val p : Bool = raise PropertyError(PropertyError("lol").exception_message)
